--- a/source/index.html
+++ b/source/index.html
@@ -17,11 +17,18 @@
     <header class="page-body__header page-header">
       <div class="page-header__top-bar top-bar top-bar--no-js">
         <a class="top-bar__logo logo" href="index.html" aria-label="Перейти на главную страницу">
-          <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          <picture>
+            <!-- <source media="(min-width: 768px)" srcset=""> -->
+            <img class="top-bar__logo-image--white logo__image logo__image--white" src="img/logo/logo_mobile--white.png" srcset="img/logo/logo_mobile--white@2x.png 2x" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          </picture>
+          <picture>
+            <!-- <source media="(min-width: 768px)" srcset=""> -->
+            <img class="top-bar__logo-image--blue logo__image logo__image--blue" src="img/logo/logo_mobile--blue.png" srcset="img/logo/logo_mobile--blue@2x.png 2x" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          </picture>
         </a>
 
         <div class="top-bar__menu menu menu--no-js">
-          <button class="menu__toggle" type="button" aria-label="Показать меню навигации"></button>
+          <button class="top-bar__menu-toggle menu__toggle" type="button" aria-label="Показать меню навигации"></button>
 
           <nav class="menu__navigation navigation">
             <ul class="navigation__list">
@@ -97,7 +104,7 @@
             </li>
           </ul>
 
-          <div class="menu__user-buttons user-buttons">
+          <div class="top-bar__user-buttons menu__user-buttons user-buttons">
             <a class="user-buttons__item user-buttons__item--phone" href="tel:88005558628" aria-label="Позвонить нам">
               <img class="user-buttons__icon" src="img/icons/icon_call.svg" width="18" height="18" alt="Иконка звонящей трубки">
             </a>
@@ -450,7 +457,10 @@
     <footer class="page-body__footer page-footer page-footer--move-up">
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo logo" href="index.html" aria-label="Перейти на главную страницу">
-          <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          <picture>
+            <!-- <source media="(min-width: 768px)" srcset=""> -->
+            <img class="logo__image logo__image--blue" src="img/logo/logo_mobile--blue.png" srcset="img/logo/logo_mobile--blue@2x.png 2x" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          </picture>
         </a>
 
         <ul class="page-footer__socials socials socials--footer">
