Adds JS for menu interactions, top-bar scroll, and to remove fallback classes

--- a/source/index.html
+++ b/source/index.html
@@ -529,5 +529,7 @@
 
       <button class="modal__button-close" type="button">Закрыть окно</button>
     </div>
+
+    <script src="js/global.js"></script>
   </body>
 </html>
