Adds retinized avatars and country photos to html

--- a/source/index.html
+++ b/source/index.html
@@ -160,7 +160,7 @@
           <ul class="countries__list">
             <li class="countries__item country-card">
               <picture>
-                <!-- <source media="(min-width: 768px)" srcset=""> -->
+                <source media="(min-width: 768px)" srcset="img/country-photos/thailand-tablet.jpg 1x, img/country-photos/thailand-tablet@2x.jpg 2x">
                 <img class="country-card__image" src="img/country-photos/thailand-mobile.jpg" srcset="img/country-photos/thailand-mobile@2x.jpg 2x" width="270" height="110" alt="Фотография зеленого тропического острова в насыщенно синей воде">
               </picture>
               <div class="country-card__container">
@@ -172,7 +172,7 @@
 
             <li class="countries__item country-card">
               <picture>
-                <!-- <source media="(min-width: 768px)" srcset=""> -->
+                <source media="(min-width: 768px)" srcset="img/country-photos/france-tablet.jpg 1x, img/country-photos/france-tablet@2x.jpg 2x">
                 <img class="country-card__image" src="img/country-photos/france-mobile.jpg" srcset="img/country-photos/france-mobile@2x.jpg 2x" width="270" height="110" alt="Фотография парижской улочки, слева пятиэтажные дома, справа аллея с деревьями">
               </picture>
               <div class="country-card__container">
@@ -184,7 +184,7 @@
 
             <li class="countries__item country-card">
               <picture>
-                <!-- <source media="(min-width: 768px)" srcset=""> -->
+                <source media="(min-width: 768px)" srcset="img/country-photos/czech-tablet.jpg 1x, img/country-photos/czech-tablet@2x.jpg 2x">
                 <img class="country-card__image" src="img/country-photos/czech-mobile.jpg" srcset="img/country-photos/czech-mobile@2x.jpg 2x" width="270" height="110" alt="Фотография с Карловым мостом и пражской архитектурой на заднем плане, на переднем плане плывет красно-белый речной трамвай">
               </picture>
               <div class="country-card__container">
@@ -210,7 +210,7 @@
             <li class="companions__item companion-card">
               <div class="companion-card__avatar-container">
                 <picture>
-                  <!-- <source media="(min-width: 768px)" srcset=""> -->
+                  <source media="(min-width: 768px)" srcset="img/avatars/tanya-firsova_tablet.jpg 1x, img/avatars/tanya-firsova_tablet@2x.jpg 2x">
                   <img class="companion-card__avatar" src="img/avatars/tanya-firsova_mobile.jpg" srcset="img/avatars/tanya-firsova_mobile@2x.jpg 2x" width="270" height="270" alt="Аватар Тани Фирсовой: девушка в ярком купальнике плавает на спине у берега, вид сверху">
                 </picture>
               </div>
@@ -226,7 +226,6 @@
                   <li class="flags-list__item">
                     <div class="flags-list__flag-container">
                       <picture>
-                        <!-- <source media="(min-width: 768px)" srcset=""> -->
                         <img class="flags-list__flag" src="img/flags/Sri-Lanka.png" srcset="img/flags/Sri-Lanka@2x.png 2x" width="35" height="25" alt="Флаг Шри-Ланки">
                       </picture>
                     </div>
@@ -237,7 +236,6 @@
                   <li class="flags-list__item">
                     <div class="flags-list__flag-container">
                       <picture>
-                        <!-- <source media="(min-width: 768px)" srcset=""> -->
                         <img class="flags-list__flag" src="img/flags/Thailand.png" srcset="img/flags/Thailand@2x.png 2x" width="35" height="25" alt="Флаг Таиланда">
                       </picture>
                     </div>
@@ -248,7 +246,6 @@
                   <li class="flags-list__item">
                     <div class="flags-list__flag-container">
                       <picture>
-                        <!-- <source media="(min-width: 768px)" srcset=""> -->
                         <img class="flags-list__flag" src="img/flags/Seychelles.png" srcset="img/flags/Seychelles@2x.png 2x" width="35" height="25" alt="Флаг Сейшелл">
                       </picture>
                     </div>
@@ -314,7 +311,7 @@
             <li class="companions__item companion-card">
               <div class="companion-card__avatar-container">
                 <picture>
-                  <!-- <source media="(min-width: 768px)" srcset=""> -->
+                  <source media="(min-width: 768px)" srcset="img/avatars/petya-demin_tablet.jpg 1x, img/avatars/petya-demin_tablet@2x.jpg 2x">
                   <img class="companion-card__avatar" src="img/avatars/petya-demin_mobile.jpg" srcset="img/avatars/petya-demin_mobile@2x.jpg 2x" width="270" height="270" alt="Аватар Пети Демина: бородатый мужчина в шапке и темных очках на фоне снега">
                 </picture>
               </div>
@@ -330,7 +327,6 @@
                   <li class="flags-list__item">
                     <div class="flags-list__flag-container">
                       <picture>
-                        <!-- <source media="(min-width: 768px)" srcset=""> -->
                         <img class="flags-list__flag" src="img/flags/Belgium.png" srcset="img/flags/Belgium@2x.png 2x" width="35" height="25" alt="Флаг Бельгии">
                       </picture>
                     </div>
@@ -341,7 +337,6 @@
                   <li class="flags-list__item">
                     <div class="flags-list__flag-container">
                       <picture>
-                        <!-- <source media="(min-width: 768px)" srcset=""> -->
                         <img class="flags-list__flag" src="img/flags/Czechia.png" srcset="img/flags/Czechia@2x.png 2x" width="35" height="25" alt="Флаг Чехии">
                       </picture>
                     </div>
