Adds register form validation

--- a/source/index.html
+++ b/source/index.html
@@ -578,5 +578,6 @@
 
     <script src="js/global.js"></script>
     <script src="js/modal.js"></script>
+    <script src="js/register-form.js"></script>
   </body>
 </html>
