--- a/source/form.html
+++ b/source/form.html
@@ -17,22 +17,37 @@
     <header class="page-body__header page-header page-header--inner">
       <div class="page-header__top-bar top-bar top-bar--no-js">
         <a class="top-bar__logo logo" href="index.html" aria-label="Перейти на главную страницу">
-          <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo/logo_desktop--white.png 1x, img/logo/logo_desktop--white@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/logo/logo_tablet--white.png 1x, img/logo/logo_tablet--white@2x.png 2x">
+            <img class="top-bar__logo-image--white logo__image logo__image--white" src="img/logo/logo_mobile--white.png" srcset="img/logo/logo_mobile--white@2x.png 2x" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          </picture>
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo/logo_desktop--blue.png 1x, img/logo/logo_desktop--blue@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/logo/logo_tablet--blue.png 1x, img/logo/logo_tablet--blue@2x.png 2x">
+            <img class="top-bar__logo-image--blue logo__image logo__image--blue" src="img/logo/logo_mobile--blue.png" srcset="img/logo/logo_mobile--blue@2x.png 2x" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          </picture>
         </a>
 
         <div class="top-bar__menu menu menu--inner-page menu--no-js">
-          <button class="menu__toggle" type="button" aria-label="Показать меню навигации"></button>
+          <button class="top-bar__menu-toggle menu__toggle" type="button" aria-label="Показать меню навигации"></button>
 
           <nav class="menu__navigation navigation">
             <ul class="navigation__list">
               <li class="navigation__item">
-                <a class="navigation__link" href="blank.html">О сервисе</a>
+                <a class="navigation__link" href="blank.html">
+                  <span class="navigation__link-text" data-hover="О сервисе">О сервисе</span>
+                </a>
               </li>
               <li class="navigation__item">
-                <a class="navigation__link" href="form.html">Направления</a>
+                <a class="navigation__link" href="form.html">
+                  <span class="navigation__link-text" data-hover="Направления">Направления</span>
+                </a>
               </li>
               <li class="navigation__item">
-                <a class="navigation__link" href="catalog.html">Попутчики</a>
+                <a class="navigation__link" href="catalog.html">
+                  <span class="navigation__link-text" data-hover="Попутчики">Попутчики</span>
+                </a>
               </li>
             </ul>
           </nav>
@@ -64,7 +79,7 @@
             </li>
           </ul>
 
-          <ul class="menu__socials socials">
+          <ul class="menu__socials socials socials--menu">
             <li class="socials__item">
               <a class="socials__link" href="#" target="_blank" aria-label="Перейти на страницу «Погнали» в Фейсбуке">
                 <svg width="14" height="28" viewBox="0 0 14 28" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
@@ -97,7 +112,7 @@
             </li>
           </ul>
 
-          <div class="menu__user-buttons user-buttons">
+          <div class="top-bar__user-buttons menu__user-buttons user-buttons">
             <a class="user-buttons__item user-buttons__item--phone" href="tel:88005558628" aria-label="Позвонить нам">
               <img class="user-buttons__icon" src="img/icons/icon_call.svg" width="18" height="18" alt="Иконка звонящей трубки">
             </a>
@@ -131,7 +146,13 @@
           </svg>
         </div>
 
-        <img class="user-profile__avatar" src="img/avatars/petya-demin.jpg" width="100" height="100" alt="Ваш аватар: бородатый мужчина в шапке и темных очках на фоне снега">
+        <div class="user-profile__avatar-container">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/avatars/petya-demin_desktop-form.jpg 1x, img/avatars/petya-demin_desktop-form@2x.jpg 2x">
+            <source media="(min-width: 768px)" srcset="img/avatars/petya-demin_tablet-form.jpg 1x, img/avatars/petya-demin_tablet-form@2x.jpg 2x">
+            <img class="user-profile__avatar" src="img/avatars/petya-demin_mobile-form.jpg" srcset="img/avatars/petya-demin_mobile-form@2x.jpg" width="100" height="100" alt="Ваш аватар: бородатый мужчина в шапке и темных очках на фоне снега">
+          </picture>
+        </div>
         <a class="user-profile__change-avatar button button--blue" href="blank.html"><span class="button__additional-text">Сменить </span>фото</a>
 
         <div class="user-profile__tags info info--no-js">
@@ -493,15 +514,17 @@
     <footer class="page-body__footer page-footer page-footer--move-up">
       <div class="page-footer__wrapper wrapper">
         <a class="page-footer__logo logo" href="index.html" aria-label="Перейти на главную страницу">
-          <img src="img/logo_mobile_blue.png" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo/logo_desktop--blue.png 1x, img/logo/logo_desktop--blue@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/logo/logo_tablet--blue.png 1x, img/logo/logo_tablet--blue@2x.png 2x">
+            <img class="logo__image logo__image--blue" src="img/logo/logo_mobile--blue.png" srcset="img/logo/logo_mobile--blue@2x.png 2x" width="96" height="15" alt="Логотип сервиса поиска попутчиков «Погнали»">
+          </picture>
         </a>
 
         <ul class="page-footer__socials socials socials--footer">
           <li class="socials__item">
-            <a class="socials__link socials__link--yellow-bg" href="#" target="_blank"
-              aria-label="Перейти на страницу «Погнали» в Фейсбуке">
-              <svg width="14" height="28" viewBox="0 0 14 28" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
-                aria-hidden="true" focusable="false">
+            <a class="socials__link socials__link--yellow-bg" href="#" target="_blank" aria-label="Перейти на страницу «Погнали» в Фейсбуке">
+              <svg width="14" height="28" viewBox="0 0 14 28" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
                 <path class="socials__icon"
                   d="M9.5 27.8H2.7v-13H0V8.6h2.6c-.2-3 .3-5 1.6-6.5a6.2 6.2 0 014.5-2h4.8v6.2H9.8c-.3.7-.3 1.5-.3 2.3h4v6.3h-4v13zm-5.3-1.6H8V13.4h4V10H8v-.8c0-2 0-3.7 1-4.4l.2-.1H12V1.5H8.8A4.7 4.7 0 005.3 3c-1 1.2-1.4 3.3-1.1 6.1v.9H1.6v3.3h2.7v13z"
                   fill="#192144" />
@@ -509,10 +532,8 @@
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link socials__link--yellow-bg" href="#" target="_blank"
-              aria-label="Перейти на страницу «Погнали» в Вконтакте">
-              <svg width="31" height="16" viewBox="0 0 31 16" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
-                aria-hidden="true" focusable="false">
+            <a class="socials__link socials__link--yellow-bg" href="#" target="_blank" aria-label="Перейти на страницу «Погнали» в Вконтакте">
+              <svg width="31" height="16" viewBox="0 0 31 16" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
                 <path class="socials__icon"
                   d="M23.95 15.78a4.05 4.05 0 01-2.08-.63c-.65-.44-1.25-.96-1.78-1.53-.44-.44-1.17-1.18-1.45-1.18s-.48.92-.47 1.57c0 .45-.17.88-.47 1.2-.35.3-.78.47-1.22.5h-1.92a11.32 11.32 0 01-7.43-3C3.45 9.36.29 2.92.16 2.64A1.34 1.34 0 01.3 1.15c.38-.32.86-.5 1.36-.48h4.2c.33.05.66.17.95.35.27.18.49.43.63.73.43.92.92 1.81 1.48 2.67 1.3 2 1.89 2.46 2.1 2.56.23-.94.3-1.91.19-2.87A2.7 2.7 0 0011 2.83a1.33 1.33 0 00-.77-.3l-.73-.68C9.37 1.19 10.1.62 10.6.4a8.69 8.69 0 013.15-.38h.7c.73-.02 1.45.05 2.16.2 1.7.36 1.64 1.73 1.57 3.3 0 .47-.05 1-.05 1.63v.48c-.04.43-.01.87.09 1.3a9.1 9.1 0 002.07-2.48 20.4 20.4 0 001.52-2.8 1.58 1.58 0 011.6-.95h4.28a2 2 0 01.38 0c1 0 1.59.29 1.83.85s.17 1.66-2.36 4.6l-1 1.14c-.49.47-.9 1-1.24 1.59.37.43.8.81 1.28 1.14 1.15.86 2.16 1.9 3 3.07a1.6 1.6 0 01.26 1.68 2.3 2.3 0 01-1.88 1l-3.8.05-.22-.04zm-5.31-4.84c.9 0 1.68.79 2.5 1.62.45.49.96.92 1.5 1.3.42.27.9.42 1.4.42h.1l3.8-.05c.2-.01.38-.06.55-.14l-.1-.16a13.22 13.22 0 00-2.68-2.72c-1.2-1-1.8-1.47-1.87-2.24-.07-.77.49-1.44 1.6-2.71l1-1.11c.85-.86 1.54-1.86 2.06-2.95a5.66 5.66 0 00-.67 0h-4.37a.55.55 0 00-.24 0 20.5 20.5 0 01-1.65 3.05c-1.9 2.82-2.78 3.2-3.41 3.2-.2 0-.4-.05-.56-.14-1-.57-1-1.84-.94-2.76v-.43c0-.65 0-1.21.05-1.7.08-1.67 0-1.68-.38-1.77a8.56 8.56 0 00-1.86-.16h-.7a13 13 0 00-1.9.1c.1.07.19.15.26.25.4.65.61 1.4.59 2.18.13 1.65.06 3.8-1 4.32-.2.09-.4.13-.6.13-.93 0-1.85-.88-3.42-3.26-.6-.91-1.14-1.87-1.61-2.85L6 2.26c-.1-.05-.21-.1-.32-.11H1.62C2.2 3.37 5 8.77 8.14 11.6a10 10 0 006.42 2.63h1.85a1 1 0 00.27-.1v-.1c0-.26 0-2.6 1.58-3l.38-.1z"
                   fill="#192144" />
@@ -520,10 +541,8 @@
             </a>
           </li>
           <li class="socials__item">
-            <a class="socials__link socials__link--yellow-bg" href="#" target="_blank"
-              aria-label="Перейти на страницу «Погнали» в Инстаграме">
-              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" role="img"
-                aria-hidden="true" focusable="false">
+            <a class="socials__link socials__link--yellow-bg" href="#" target="_blank" aria-label="Перейти на страницу «Погнали» в Инстаграме">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" focusable="false">
                 <path class="socials__icon"
                   d="M17.28 2.4a4.33 4.33 0 014.32 4.32v10.56a4.33 4.33 0 01-4.32 4.32H6.72a4.33 4.33 0 01-4.31-4.32V6.72A4.33 4.33 0 016.72 2.4h10.56zm0-1.44H6.72A5.76 5.76 0 00.96 6.72v10.56a5.76 5.76 0 005.76 5.76h10.56a5.76 5.76 0 005.76-5.76V6.72A5.76 5.76 0 0017.28.96z"
                   fill="#192144" />
@@ -536,13 +555,14 @@
         </ul>
 
         <p class="page-footer__copyright copyright">
-          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank"
-            aria-label="Перейти на сайт HTML Academy">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" aria-label="Перейти на сайт HTML Academy">
             <span class="copyright__text">Разработано</span>
             <img src="img/htmlacademy.svg" width="27" height="33" alt="Логотип HTML Academy">
           </a>
         </p>
       </div>
     </footer>
+
+    <script src="js/global.js"></script>
   </body>
 </html>
