--- a/source/catalog.html
+++ b/source/catalog.html
@@ -148,7 +148,7 @@
         </div>
       </div>
 
-      <section class="page-main__section page-main__section--light filter-country filter-country--open">
+      <section class="page-main__section page-main__section--light filter-country filter-country--no-js">
         <div class="filter-country__tabs-container">
           <div class="filter-country__wrapper wrapper">
             <h2 class="page-main__title page-main__title--uppercase page-main__title--no-margin filter-country__title">Фильтрация по странам:</h2>
@@ -1451,5 +1451,8 @@
         </p>
       </div>
     </footer>
+
+    <script src="js/global.js"></script>
+    <script src="js/filter-country.js"></script>
   </body>
 </html>
