Updates links to countries in the filter

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -209,37 +209,37 @@
                 <h3 class="filter-country__list-title">А</h3>
                 <ul class="filter-country__list">
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Австралия</a>
+                    <a class="filter-country__link" href="/oceania/australia">Австралия</a>
                   </li>
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Австрия</a>
+                    <a class="filter-country__link" href="/europe/austria">Австрия</a>
                   </li>
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Азербайджан</a>
+                    <a class="filter-country__link" href="/asia/azerbaijan">Азербайджан</a>
                   </li>
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Албания</a>
+                    <a class="filter-country__link" href="/europe/albania">Албания</a>
                   </li>
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Алжир</a>
+                    <a class="filter-country__link" href="/middle-east/algeria">Алжир</a>
                   </li>
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Ангола</a>
+                    <a class="filter-country__link" href="/africa/angola">Ангола</a>
                   </li>
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Андорра</a>
+                    <a class="filter-country__link" href="/europe/andorra">Андорра</a>
                   </li>
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Антигуа и Барбуда</a>
+                    <a class="filter-country__link" href="/islands/antigua-and-barbuda">Антигуа и Барбуда</a>
                   </li>
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Аргентина</a>
+                    <a class="filter-country__link" href="/america/argentina">Аргентина</a>
                   </li>
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Армения</a>
+                    <a class="filter-country__link" href="/asia/armenia">Армения</a>
                   </li>
                   <li class="filter-country__item">
-                    <a class="filter-country__link" href="#">Афганистан</a>
+                    <a class="filter-country__link" href="/asia/afghanistan">Афганистан</a>
                   </li>
                 </ul>
               </div>
